src/objects/loan__Coborrower__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Coborrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Coborrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract ID</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Contract Parties</relationshipLabel>
        <relationshipName>Coborrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Party_Type__c</fullName>
        <description>Type of the Contract Party</description>
        <inlineHelpText>Type of the Contract Party</inlineHelpText>
        <label>Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>COBORROWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUARANTOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Party</label>
    <nameField>
        <displayFormat>CID-{000000000}</displayFormat>
        <label>Contract Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_Party_Account_and_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( loan__Account__c ), ISBLANK( loan__Contact__c ))</errorConditionFormula>
        <errorMessage>Please enter either an Account or a Contact.</errorMessage>
    </validationRules>
</CustomObject>